--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <button id="break60Btn">I'm taking an hour lunch break</button>
         </div>
         <!-- Add an audio element -->
-        <audio id="notification-sound" src="/notification.mp3"></audio>
+        <audio id="notification-sound" src="\notification.mp3"></audio>
     </div>
 
     <!-- Notification Sound Button -->
